# persona-research-internship

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Makefile  README.md  TextAttack_Tutorial.ipynb  check_figure_code_placeholder.py  check_recent_code.py  copy_plots.sh  get_embeddings.py  linearline.ipynb  main.py  mats_70M_step3000.pth  pre-commit  pyproject.toml  requirements.txt  setup.py  trufflehog_check.sh
llm_ontology/: 2_Noun_Test.ipynb  Makefile  README.md  get_frequency_speed.py  obofoundry_scores.py  ontology_scores.py  parallel_heatmaps.py  pyproject.toml  requirements.txt
llm_ontology/data/: index_to_term_pythia.json  olmo_7B_model_names.txt  open_llm_pythia_scores_102724.json  term_depths.json
llm_ontology/figures/: interactive_frequency_score_scatterplot_example_v4_dolmasample_olmo.html  interactive_frequency_score_scatterplot_example_v4_olmo-2-0325-32b-instruct_llama.html  interactive_frequency_score_scatterplot_example_v4_olmo-2-1124-13b-instruct_llama.html  interactive_frequency_score_scatterplot_example_v4_olmoe-0125-1b-7b-instruct_llama.html  plot_term_scores.html
llm_ontology/ipynb/: get_heatmap_row_terms.ipynb  get_wordnet_hypernym.ipynb
llm_ontology/llm_ontology/: __init__.py  check_figure_code.py  check_figure_code_placeholder.py  compare_gamma_matrices.py  compute_g_matrices.py  frequencies.py  frequency_score_scatterplots.py  get_obo_ontology_hypernym.py  graphtest.py  multiword_underscore_to_space.py  obo_depth_scatterplots.py  obo_ontology_heatmaps.py  obofoundry_scores.py  ontology_dropoff_rates.py  ontology_scores.py  parallel_heatmaps.py  pca.py  plot_noise.py  plot_scores_vs_training_steps_from_heatmaps.py  plot_scores_vs_training_steps_from_txt.py  plot_term_scores.py  profile_function.py  runner.py  save_term_scores.py  score_vs_depth_1.py  store_matrices.py  test2.py  test3.py  test_save_gamma_matrix.py  test_unembedding_speed.py  utils.py
llm_ontology/manuscripts/: manuscript.typ  zotero.bib
llm_ontology/shell_scripts/: lint_code.py
(+661 files in other folders)
