[tool.poetry]
name = "contrastive-tda"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
openai = "^1.3.7"
dvc = "^3.33.3"
dvc-gdrive = "^2.20.0"
notebook = "^7.0.6"
openpyxl = "^3.1.2"
pandera = "^0.17.2"
pydantic = "^2.5.2"
loguru = "^0.7.2"
python-dotenv = "^1.0.0"
cohere = "^4.39"
llama-index = "^0.9.15.post2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
